fix validators